--- a/src/index.css
+++ b/src/index.css
@@ -3,58 +3,75 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  --background: hsl(0 0% 100%);
-  --foreground: hsl(222.2 84% 4.9%);
-  --card: hsl(0 0% 100%);
-  --card-foreground: hsl(222.2 84% 4.9%);
-  --popover: hsl(0 0% 100%);
-  --popover-foreground: hsl(222.2 84% 4.9%);
-  --primary: hsl(222.2 47.4% 11.2%);
-  --primary-foreground: hsl(210 40% 98%);
-  --secondary: hsl(210 40% 96.1%);
-  --secondary-foreground: hsl(222.2 47.4% 11.2%);
-  --muted: hsl(210 40% 96.1%);
-  --muted-foreground: hsl(215.4 16.3% 46.9%);
-  --accent: hsl(210 40% 96.1%);
-  --accent-foreground: hsl(222.2 47.4% 11.2%);
-  --destructive: hsl(0 84.2% 60.2%);
-  --destructive-foreground: hsl(210 40% 98%);
-  --border: hsl(214.3 31.8% 91.4%);
-  --input: hsl(214.3 31.8% 91.4%);
-  --ring: hsl(222.2 84% 4.9%);
-  --chart-1: hsl(12 76% 61%);
-  --chart-2: hsl(173 58% 39%);
-  --chart-3: hsl(197 37% 24%);
-  --chart-4: hsl(43 74% 66%);
-  --chart-5: hsl(27 87% 67%);
-  --radius: 0.6rem;
+  --background: hsl(338.2 0% 100%);
+  --foreground: hsl(0 0% 0%);
+  --card: hsl(338.2 0% 100%);
+  --card-foreground: hsl(0 0% 0%);
+  --popover: hsl(338.2 0% 100%);
+  --popover-foreground: hsl(0 0% 0%);
+  --primary: hsl(337.5 0% 5.1%);
+  --primary-foreground: hsl(338.2 0% 100%);
+  --secondary: hsl(320 0% 94.9%);
+  --secondary-foreground: hsl(0 0% 30%);
+  --muted: hsl(0 2% 90%);
+  --muted-foreground: hsl(0 0% 30%);
+  --accent: hsl(0 2% 90%);
+  --accent-foreground: hsl(0 0% 20%);
+  --destructive: hsl(6.8 122.3% 77.9%);
+  --destructive-foreground: hsl(0 0% 0%);
+  --border: hsl(0 0% 30%);
+  --input: hsl(0 0% 30%);
+  --ring: hsl(337.5 0% 5.1%);
+  --chart-1: hsl(337.5 0% 5.1%);
+  --chart-2: hsl(320 0% 94.9%);
+  --chart-3: hsl(0 2% 90%);
+  --chart-4: hsl(0 2% 100%);
+  --chart-5: hsl(337.5 0% 15.1%);
+  --radius: 0.5rem;
+
+  /* --sidebar-background: hsl(0 0% 97%);
+  --sidebar-foreground: hsl(0 0% 38%);
+  --sidebar-primary: hsl(0 0% 50%);
+  --sidebar-primary-foreground: hsl(0 0% 0%);
+  --sidebar-accent: hsl(0 2% 87%);
+  --sidebar-accent-foreground: hsl(0 0% 20%);
+  --sidebar-border: hsl(0 0% 27%);
+  --sidebar-ring: hsl(0 0% 2%); */
 }
 
 .dark {
-  --background: hsl(222.2 84% 4.9%);
-  --foreground: hsl(210 40% 98%);
-  --card: hsl(222.2 84% 4.9%);
-  --card-foreground: hsl(210 40% 98%);
-  --popover: hsl(222.2 84% 4.9%);
-  --popover-foreground: hsl(210 40% 98%);
-  --primary: hsl(210 40% 98%);
-  --primary-foreground: hsl(222.2 47.4% 11.2%);
-  --secondary: hsl(217.2 32.6% 17.5%);
-  --secondary-foreground: hsl(210 40% 98%);
-  --muted: hsl(217.2 32.6% 17.5%);
-  --muted-foreground: hsl(215 20.2% 65.1%);
-  --accent: hsl(217.2 32.6% 17.5%);
-  --accent-foreground: hsl(210 40% 98%);
-  --destructive: hsl(0 62.8% 30.6%);
-  --destructive-foreground: hsl(210 40% 98%);
-  --border: hsl(217.2 32.6% 17.5%);
-  --input: hsl(217.2 32.6% 17.5%);
-  --ring: hsl(212.7 26.8% 83.9%);
-  --chart-1: hsl(220 70% 50%);
-  --chart-2: hsl(160 60% 45%);
-  --chart-3: hsl(30 80% 55%);
-  --chart-4: hsl(280 65% 60%);
-  --chart-5: hsl(340 75% 55%);
+  --background: hsl(338.2 10% 10%);
+  --foreground: hsl(0 10% 90%);
+  --card: hsl(338.2 10% 10%);
+  --card-foreground: hsl(0 10% 90%);
+  --popover: hsl(338.2 10% 10%);
+  --popover-foreground: hsl(0 10% 90%);
+  --primary: hsl(337.5 10% 90%);
+  --primary-foreground: hsl(338.2 10% 10%);
+  --secondary: hsl(320 10% 10%);
+  --secondary-foreground: hsl(0 10% 70%);
+  --muted: hsl(0 12% 10%);
+  --muted-foreground: hsl(0 10% 70%);
+  --accent: hsl(0 12% 10%);
+  --accent-foreground: hsl(0 10% 80%);
+  --destructive: hsl(6.8 100% 22.1%);
+  --destructive-foreground: hsl(0 10% 90%);
+  --border: hsl(0 10% 70%);
+  --input: hsl(0 10% 70%);
+  --ring: hsl(337.5 10% 90%);
+  --chart-1: hsl(337.5 10% 20%);
+  --chart-2: hsl(320 10% 60%);
+  --chart-3: hsl(0 12% 60%);
+  --chart-4: hsl(0 12% 60%);
+  --chart-5: hsl(337.5 10% 20%);
+  /* --sidebar-background: hsl(338 10% 2%);
+  --sidebar-foreground: hsl(0 10% 56%);
+  --sidebar-primary: hsl(337 10% 50%);
+  --sidebar-primary-foreground: hsl(338 10% 100%);
+  --sidebar-accent: hsl(0 12% 25%);
+  --sidebar-accent-foreground: hsl(0 10% 80%);
+  --sidebar-border: hsl(0 10% 62%);
+  --sidebar-ring: hsl(337 10% 82%); */
 }
 
 @theme inline {
